logs/validate.20260326-093619.log
error[E0425]: cannot find value `Less` in this scope
   --> src/Chap43/OrderedSetMtEph.rs:185:39
    |
185 |                     v.cmp_spec(&t) == Less || v@ == t@;
    |                                       ^^^^ not found in this scope
    |
help: consider importing one of these unit variants
    |
 19 +     use crate::Chap43::OrderedSetMtEph::OrderedSetMtEph::O::Less;
    |
 19 +     use std::cmp::Ordering::Less;
    |

error[E0425]: cannot find value `Less` in this scope
   --> src/Chap43/OrderedSetMtEph.rs:195:39
    |
195 |                     t.cmp_spec(&v) == Less || v@ == t@;
    |                                       ^^^^ not found in this scope
    |
help: consider importing one of these unit variants
    |
 19 +     use crate::Chap43::OrderedSetMtEph::OrderedSetMtEph::O::Less;
    |
 19 +     use std::cmp::Ordering::Less;
    |

error[E0425]: cannot find value `Less` in this scope
   --> src/Chap43/OrderedSetMtEph.rs:203:66
    |
203 |                 predecessor matches Some(v) ==> v.cmp_spec(k) == Less,
    |                                                                  ^^^^ not found in this scope
    |
help: consider importing one of these unit variants
    |
 19 +     use crate::Chap43::OrderedSetMtEph::OrderedSetMtEph::O::Less;
    |
 19 +     use std::cmp::Ordering::Less;
    |

error[E0425]: cannot find value `Less` in this scope
   --> src/Chap43/OrderedSetMtEph.rs:205:71
    |
205 |                     #[trigger] self@.contains(t@) && t.cmp_spec(k) == Less ==>
    |                                                                       ^^^^ not found in this scope
    |
help: consider importing one of these unit variants
    |
 19 +     use crate::Chap43::OrderedSetMtEph::OrderedSetMtEph::O::Less;
    |
 19 +     use std::cmp::Ordering::Less;
    |

error[E0425]: cannot find value `Less` in this scope
   --> src/Chap43/OrderedSetMtEph.rs:206:39
    |
206 |                     t.cmp_spec(&v) == Less || v@ == t@;
    |                                       ^^^^ not found in this scope
    |
help: consider importing one of these unit variants
    |
 19 +     use crate::Chap43::OrderedSetMtEph::OrderedSetMtEph::O::Less;
    |
 19 +     use std::cmp::Ordering::Less;
    |

error[E0425]: cannot find value `Greater` in this scope
   --> src/Chap43/OrderedSetMtEph.rs:214:64
    |
214 |                 successor matches Some(v) ==> v.cmp_spec(k) == Greater,
    |                                                                ^^^^^^^ not found in this scope
    |
help: consider importing one of these unit variants
    |
 19 +     use crate::Chap43::OrderedSetMtEph::OrderedSetMtEph::O::Greater;
    |
 19 +     use std::cmp::Ordering::Greater;
    |

error[E0425]: cannot find value `Greater` in this scope
   --> src/Chap43/OrderedSetMtEph.rs:216:71
    |
216 |                     #[trigger] self@.contains(t@) && t.cmp_spec(k) == Greater ==>
    |                                                                       ^^^^^^^ not found in this scope
    |
help: consider importing one of these unit variants
    |
 19 +     use crate::Chap43::OrderedSetMtEph::OrderedSetMtEph::O::Greater;
    |
 19 +     use std::cmp::Ordering::Greater;
    |

error[E0425]: cannot find value `Less` in this scope
   --> src/Chap43/OrderedSetMtEph.rs:217:39
    |
217 |                     v.cmp_spec(&t) == Less || v@ == t@;
    |                                       ^^^^ not found in this scope
    |
help: consider importing one of these unit variants
    |
 19 +     use crate::Chap43::OrderedSetMtEph::OrderedSetMtEph::O::Less;
    |
 19 +     use std::cmp::Ordering::Less;
    |

error: aborting due to 8 previous errors

For more information about this error, try `rustc --explain E0425`.
